Fix / Development: Fixed issue with filters menu on mobile not 100% width, Finished README.md

--- a/app/static/css/media_queries.css
+++ b/app/static/css/media_queries.css
@@ -57,6 +57,10 @@
         width: 100%;
     }
 
+    #filters-search .uk-select {
+        width: 100%;
+    }
+
     #filters-form {
        display: none;
     }
